# whatslang

./: .cursorignore  .dockerignore  .env.example  .gitignore  API_ERROR_HANDLING.md  AUDIO_TRANSCRIPTION_FIX.md  AUTHENTICATION.md  CHANGELOG.md  CI_CD_SUMMARY.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUMMARY.md  DOCUMENTATION_REORGANIZATION.md  DOKPLOY_DEFAULTS_EXPLANATION.md  DOKPLOY_ENV_TROUBLESHOOTING.md  DOKPLOY_QUICK_START.md  Dockerfile  FIX_COMPLETE.md  GITHUB_ACTIONS_SETUP.md  IMAGE_BUG_FIX.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MEDIA_FEATURES_IMPLEMENTATION.md  MEDIA_TROUBLESHOOTING.md  MIGRATION_FIX_SUMMARY.md  MIGRATION_QUICK_FIX.md  Makefile  ORGANIZATION_SUMMARY.md  PASSWORD_IMPLEMENTATION.md  PERSISTENCE.md  PERSISTENCE_MIGRATION_SUMMARY.md  PRODUCTION_FIX.md  QUICKSTART.md  QUICK_FIX_SUMMARY.md  QUICK_REFERENCE.md  README.md  README_PASSWORD.md  READ_ME_FIRST.md  (+22 more)
.github/: FIRST_TIME_SETUP.md  QUICK_REFERENCE.md
.github/workflows/: README.md  WORKFLOW_DIAGRAM.md  ci-cd.yml  docker-build.yml
api/: __init__.py  auth.py  bot_manager.py  main.py  middleware.py  models.py
backend/: Dockerfile  REQUIREMENTS.md  check_db_state.py  entrypoint.sh  init_default_user.py  requirements-local.txt  requirements.txt  run_migrations.py
backend/alembic/: env.py
backend/app/: __init__.py  config.py  database.py  main.py
bots/: __init__.py  joke_bot.py  translation_bot.py
core/: __init__.py  bot_base.py  database.py  llm_service.py  whatsapp_client.py
data/: .gitkeep
docs/: CI_CD.md  CREATING_BOTS.md  DEPLOYMENT.md  DEVELOPMENT.md  DOKPLOY_DEPLOYMENT.md  FRONTEND_IMPLEMENTATION.md  GETTING_STARTED.md  MIGRATIONS.md  NAVIGATION.md  QUICKSTART.md  QUICK_START_FRONTEND.md  QUICK_START_HERE.md  README.md  SECURITY.md
docs/archive/: COMPLETE_PROTECTION_SUMMARY.md  FIXES_SUMMARY.md  QUICKSTART_PASSWORD.md  README.md  SECURITY_IMPLEMENTATION.md
docs/dev-notes/: BUGFIXES.md  DEPLOYMENT_FIXES.md  SETUP_COMPLETE.md  VISUAL_IMPROVEMENTS.md
frontend/: Dockerfile  README.md  UI_REDESIGN_SUMMARY.md  app.js  check-auth.js  entrypoint.sh  index.html  login.css  login.html  login.js  nginx.conf  package.json  styles.css  tsconfig.json  tsconfig.node.json  vite-env.d.ts  vite.config.ts
scripts/: update-registry-config.sh
(+73 files in other folders)
